Perma Linux crash | application crashed [@ WakeLockTopic::CheckWaylandIdleInhibitSupport()]
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox72 | --- | unaffected |
firefox73 | --- | unaffected |
firefox74 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: val)
References
(Regression)
Details
(Keywords: crash, intermittent-failure, regression)
Crash Data
Attachments
(1 file)
Filed by: nerli [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=283733860&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/dyKL81N0TASrBFWKS6bppA/runs/0/artifacts/public/logs/live_backing.log
[task 2020-01-06T23:45:17.850Z] 23:45:17 INFO - TEST-START | dom/base/test/test_audioNotification.html
[task 2020-01-06T23:45:17.967Z] 23:45:17 INFO - GECKO(4540) | MEMORY STAT | vsize 2628MB | residentFast 148MB | heapAllocated 19MB
[task 2020-01-06T23:45:17.968Z] 23:45:17 INFO - GECKO(4540) | ExceptionHandler::GenerateDump cloned child 4759
[task 2020-01-06T23:45:17.968Z] 23:45:17 INFO - GECKO(4540) | ExceptionHandler::SendContinueSignalToChild sent continue signal to child
[task 2020-01-06T23:45:17.968Z] 23:45:17 INFO - GECKO(4540) | ExceptionHandler::WaitForContinueSignal waiting for continue signal...
[task 2020-01-06T23:45:18.094Z] 23:45:18 INFO - GECKO(4540) | Exiting due to channel error.
[task 2020-01-06T23:45:18.100Z] 23:45:18 INFO - GECKO(4540) | Exiting due to channel error.
[task 2020-01-06T23:45:18.100Z] 23:45:18 INFO - GECKO(4540) | Exiting due to channel error.
[task 2020-01-06T23:45:18.145Z] 23:45:18 INFO - TEST-INFO | Main app process: exit 11
[task 2020-01-06T23:45:18.146Z] 23:45:18 INFO - Buffered messages logged at 23:45:17
[task 2020-01-06T23:45:18.147Z] 23:45:18 INFO - TEST-PASS | dom/base/test/test_audioNotification.html | Observer set
[task 2020-01-06T23:45:18.147Z] 23:45:18 INFO - TEST-PASS | dom/base/test/test_audioNotification.html | audio-playback received
[task 2020-01-06T23:45:18.148Z] 23:45:18 INFO - TEST-PASS | dom/base/test/test_audioNotification.html | This is the right notification
[task 2020-01-06T23:45:18.149Z] 23:45:18 INFO - TEST-PASS | dom/base/test/test_audioNotification.html | audio-playback received
[task 2020-01-06T23:45:18.149Z] 23:45:18 INFO - TEST-PASS | dom/base/test/test_audioNotification.html | This is the right notification
[task 2020-01-06T23:45:18.150Z] 23:45:18 INFO - TEST-PASS | dom/base/test/test_audioNotification.html | Observer removed
[task 2020-01-06T23:45:18.150Z] 23:45:18 INFO - Buffered messages finished
[task 2020-01-06T23:45:18.151Z] 23:45:18 ERROR - TEST-UNEXPECTED-FAIL | dom/base/test/test_audioNotification.html | application terminated with exit code 11
[task 2020-01-06T23:45:18.151Z] 23:45:18 INFO - runtests.py | Application ran for: 0:00:09.818894
[task 2020-01-06T23:45:18.152Z] 23:45:18 INFO - zombiecheck | Reading PID log: /tmp/tmpt5Fz8ipidlog
[task 2020-01-06T23:45:18.152Z] 23:45:18 INFO - ==> process 4540 launched child process 4557
[task 2020-01-06T23:45:18.153Z] 23:45:18 INFO - ==> process 4540 launched child process 4594
[task 2020-01-06T23:45:18.153Z] 23:45:18 INFO - ==> process 4540 launched child process 4611
[task 2020-01-06T23:45:18.153Z] 23:45:18 INFO - ==> process 4540 launched child process 4681
[task 2020-01-06T23:45:18.154Z] 23:45:18 INFO - ==> process 4540 launched child process 4745
[task 2020-01-06T23:45:18.154Z] 23:45:18 INFO - zombiecheck | Checking for orphan process with PID: 4681
[task 2020-01-06T23:45:18.154Z] 23:45:18 INFO - zombiecheck | Checking for orphan process with PID: 4594
[task 2020-01-06T23:45:18.155Z] 23:45:18 INFO - zombiecheck | Checking for orphan process with PID: 4611
[task 2020-01-06T23:45:18.155Z] 23:45:18 INFO - zombiecheck | Checking for orphan process with PID: 4557
[task 2020-01-06T23:45:18.155Z] 23:45:18 INFO - zombiecheck | Checking for orphan process with PID: 4745
[task 2020-01-06T23:45:18.156Z] 23:45:18 INFO - mozcrash Downloading symbols from: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/EjBt5Y3NQ7yas1vuF1Pzqg/artifacts/public/build/target.crashreporter-symbols.zip
[task 2020-01-06T23:45:21.438Z] 23:45:21 INFO - mozcrash Copy/paste: /builds/worker/workspace/build/linux64-minidump_stackwalk /tmp/tmp1JK1sy.mozrunner/minidumps/5b525873-e225-64e0-ad2a-af79f5f36917.dmp /tmp/tmpF1vkJq
[task 2020-01-06T23:45:25.475Z] 23:45:25 INFO - mozcrash Saved minidump as /builds/worker/workspace/build/blobber_upload_dir/5b525873-e225-64e0-ad2a-af79f5f36917.dmp
[task 2020-01-06T23:45:25.475Z] 23:45:25 INFO - mozcrash Saved app info as /builds/worker/workspace/build/blobber_upload_dir/5b525873-e225-64e0-ad2a-af79f5f36917.extra
[task 2020-01-06T23:45:25.642Z] 23:45:25 INFO - PROCESS-CRASH | dom/base/test/test_audioNotification.html | application crashed [@ WakeLockTopic::CheckWaylandIdleInhibitSupport()]
[task 2020-01-06T23:45:25.643Z] 23:45:25 INFO - Crash dump filename: /tmp/tmp1JK1sy.mozrunner/minidumps/5b525873-e225-64e0-ad2a-af79f5f36917.dmp
[task 2020-01-06T23:45:25.644Z] 23:45:25 INFO - Operating system: Linux
[task 2020-01-06T23:45:25.644Z] 23:45:25 INFO - 0.0.0 Linux 4.4.0-1014-aws #14taskcluster1-Ubuntu SMP Tue Apr 3 10:27:00 UTC 2018 x86_64
[task 2020-01-06T23:45:25.645Z] 23:45:25 INFO - CPU: amd64
[task 2020-01-06T23:45:25.645Z] 23:45:25 INFO - family 6 model 85 stepping 4
[task 2020-01-06T23:45:25.646Z] 23:45:25 INFO - 2 CPUs
[task 2020-01-06T23:45:25.647Z] 23:45:25 INFO -
[task 2020-01-06T23:45:25.647Z] 23:45:25 INFO - GPU: UNKNOWN
[task 2020-01-06T23:45:25.648Z] 23:45:25 INFO -
[task 2020-01-06T23:45:25.648Z] 23:45:25 INFO - Crash reason: SIGSEGV /SEGV_MAPERR
[task 2020-01-06T23:45:25.649Z] 23:45:25 INFO - Crash address: 0x60
[task 2020-01-06T23:45:25.649Z] 23:45:25 INFO - Process uptime: not available
[task 2020-01-06T23:45:25.650Z] 23:45:25 INFO -
[task 2020-01-06T23:45:25.650Z] 23:45:25 INFO - Thread 0 (crashed)
[task 2020-01-06T23:45:25.651Z] 23:45:25 INFO - 0 libxul.so!WakeLockTopic::CheckWaylandIdleInhibitSupport() [WakeLockListener.cpp:e6427fac5ee8d1d87fb78e917781e85dda119a81 : 230 + 0x0]
[task 2020-01-06T23:45:25.651Z] 23:45:25 INFO - rax = 0x0000000000000000 rdx = 0x00007f3646f35458
[task 2020-01-06T23:45:25.652Z] 23:45:25 INFO - rcx = 0x0000000000000000 rbx = 0x0000000000000000
[task 2020-01-06T23:45:25.652Z] 23:45:25 INFO - rsi = 0x0000000000000001 rdi = 0x00007f3646f72d00
[task 2020-01-06T23:45:25.653Z] 23:45:25 INFO - rbp = 0x00007ffd2975a010 rsp = 0x00007ffd2975a000
[task 2020-01-06T23:45:25.653Z] 23:45:25 INFO - r8 = 0x00007f3646f35488 r9 = 0x00007f3620d6b800
[task 2020-01-06T23:45:25.654Z] 23:45:25 INFO - r10 = 0x0000000000000021 r11 = 0x00007f3615af9244
[task 2020-01-06T23:45:25.654Z] 23:45:25 INFO - r12 = 0x00007f361ea0e968 r13 = 0x00007f362f389750
[task 2020-01-06T23:45:25.655Z] 23:45:25 INFO - r14 = 0x00007f361ec7a640 r15 = 0x00007f3634eeb300
[task 2020-01-06T23:45:25.655Z] 23:45:25 INFO - rip = 0x00007f3637924a65
[task 2020-01-06T23:45:25.656Z] 23:45:25 INFO - Found by: given as instruction pointer in context
[task 2020-01-06T23:45:25.656Z] 23:45:25 INFO - 1 libxul.so!WakeLockTopic::InhibitFailed() [WakeLockListener.cpp:e6427fac5ee8d1d87fb78e917781e85dda119a81 : 377 + 0xb]
[task 2020-01-06T23:45:25.657Z] 23:45:25 INFO - rbx = 0x00007f361ec7a640 rbp = 0x00007ffd2975a030
[task 2020-01-06T23:45:25.657Z] 23:45:25 INFO - rsp = 0x00007ffd2975a020 r12 = 0x00007f361ea0e968
[task 2020-01-06T23:45:25.658Z] 23:45:25 INFO - r13 = 0x00007f362f389750 r14 = 0x00007f361ec7a640
[task 2020-01-06T23:45:25.658Z] 23:45:25 INFO - r15 = 0x00007f3634eeb300 rip = 0x00007f3637924ccf
[task 2020-01-06T23:45:25.659Z] 23:45:25 INFO - Found by: call frame info
[task 2020-01-06T23:45:25.659Z] 23:45:25 INFO - 2 libxul.so!WakeLockTopic::ReceiveInhibitReply(DBusPendingCall*, void*) [WakeLockListener.cpp:e6427fac5ee8d1d87fb78e917781e85dda119a81 : 430 + 0x8]
[task 2020-01-06T23:45:25.660Z] 23:45:25 INFO - rbx = 0x00007f3624349940 rbp = 0x00007ffd2975a060
[task 2020-01-06T23:45:25.660Z] 23:45:25 INFO - rsp = 0x00007ffd2975a040 r12 = 0x00007f361ea0e968
[task 2020-01-06T23:45:25.661Z] 23:45:25 INFO - r13 = 0x00007f362f389750 r14 = 0x00007f361ec7a640
[task 2020-01-06T23:45:25.661Z] 23:45:25 INFO - r15 = 0x00007f3634eeb300 rip = 0x00007f3637924689
[task 2020-01-06T23:45:25.662Z] 23:45:25 INFO - Found by: call frame info
Updated•6 years ago
|
![]() |
||
Comment 1•6 years ago
|
||
Greg, can you investigate these failures for Firefox running in headless mode? See e.g. https://treeherder.mozilla.org/#/jobs?repo=mozilla-central&searchStr=headless&tochange=e6427fac5ee8d1d87fb78e917781e85dda119a81&fromchange=989bbd83ccd5a6fbc706b8eb6635a471596c6a43&group_state=expanded&selectedJob=283733860
These tasks don't run for every push, that's why the issue got discovered with delay. Thank you in advance.
Updated•6 years ago
|
![]() |
||
Updated•6 years ago
|
Assignee | ||
Comment 2•6 years ago
|
||
Updated•6 years ago
|
Updated•6 years ago
|
Comment 6•6 years ago
|
||
bugherder |
Updated•6 years ago
|
Comment hidden (Intermittent Failures Robot) |
Description
•