Bug 1607368 - check for headless when checking for Wayland idle-inhibit r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D59094

--HG--
extra : moz-landing-system : lando